sumo/tests/dfrouter/errors/network/edge/cedge/root__edge__cedge#id__ungiven1/errors.dfrouter
Error: At edge '1': a succeeding edge has no id.
Quitting (on error).
